[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Nicky van Urk <info@nickyvanurk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1"
peg = "0.6.3"
anyhow = "1.0.37"
nom = "6"
